Revert "Update cartridges.yml"
This reverts commit 3deb9550ffe10beeb0e32a0db260c50027b20ce6.

--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
@@ -61,7 +61,7 @@
       ui: !type:LedgerUi
     - type: Cartridge
       programName: ledger-program-name
-      icon: _NF/Interface/icons.rsi/ledger
+      icon: _NF/Interface/icons.rsi/ledger.png
       readonly: true
     - type: NFLedgerCartridge
 
@@ -81,7 +81,7 @@
       ui: !type:YupiTransferUi
     - type: Cartridge
       programName: yupi-program-name
-      icon: _NF/Interface/icons.rsi/ledger
+      icon: _NF/Interface/icons.rsi/ledger.png
     - type: YupiTransferCartridge
 
 # Not a PDA cartridge (then why is this here)
