--- a/Resources/Prototypes/_Lua/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_Lua/Loadouts/role_loadouts.yml
@@ -3,7 +3,7 @@
 # See AGPLv3.txt for details.
 
 - type: roleLoadout
-  id: JobChemist 
+  id: JobChemist
   groups:
   - MedicalMask
   - ChemistJumpsuit
@@ -16,9 +16,29 @@
   - TopUnderwear
   - PantsUnderwear
   - SocksUnderwear
+  # Added contractor groups (extension)
+  - ContractorHead
+  - ContractorNeck
+  - ContractorJumpsuit
+  - ContractorGloves
+  - ContractorBackpack
+  - ContractorOuterClothing
+  - ContractorForcedOuterClothing
+  - ContractorShoes
+  - ContractorFace
+  - ContractorGlasses
+  - ContractorBelt
+  - ContractorEars
+  - ContractorEncryptionKey
+  - ContractorBoxSurvival
+  - ContractorPDA
+  - ContractorCartridge
+  - ContractorImplanter
+  - ContractorBackpackItems
+  - ContractorHandItems
 
 - type: roleLoadout
-  id: JobParamedic 
+  id: JobParamedic
   groups:
   - ParamedicHead
   - MedicalMask
@@ -33,9 +53,29 @@
   - TopUnderwear
   - PantsUnderwear
   - SocksUnderwear
+  # Added contractor groups (extension)
+  - ContractorHead
+  - ContractorNeck
+  - ContractorJumpsuit
+  - ContractorGloves
+  - ContractorBackpack
+  - ContractorOuterClothing
+  - ContractorForcedOuterClothing
+  - ContractorShoes
+  - ContractorFace
+  - ContractorGlasses
+  - ContractorBelt
+  - ContractorEars
+  - ContractorEncryptionKey
+  - ContractorBoxSurvival
+  - ContractorPDA
+  - ContractorCartridge
+  - ContractorImplanter
+  - ContractorBackpackItems
+  - ContractorHandItems
 
 - type: roleLoadout
-  id: JobMedicalDoctor 
+  id: JobMedicalDoctor
   groups:
   - MedicalDoctorHead
   - MedicalMask
@@ -51,9 +91,29 @@
   - TopUnderwear
   - PantsUnderwear
   - SocksUnderwear
+  # Added contractor groups (extension)
+  - ContractorHead
+  - ContractorNeck
+  - ContractorJumpsuit
+  - ContractorGloves
+  - ContractorBackpack
+  - ContractorOuterClothing
+  - ContractorForcedOuterClothing
+  - ContractorShoes
+  - ContractorFace
+  - ContractorGlasses
+  - ContractorBelt
+  - ContractorEars
+  - ContractorEncryptionKey
+  - ContractorBoxSurvival
+  - ContractorPDA
+  - ContractorCartridge
+  - ContractorImplanter
+  - ContractorBackpackItems
+  - ContractorHandItems
 
 - type: roleLoadout
-  id: JobCentralCommandCargo 
+  id: JobCentralCommandCargo
   groups:
   - NFSpeciesSpecific
   - ContractorWallet
