--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -1,4 +1,5 @@
 #Burgers
+# Burger recipes and novelty variants.
 
 - type: microwaveMealRecipe
   id: RecipeClurgerBurger
@@ -10,6 +11,62 @@
     FoodBreadBun: 1
     ClothingHeadMailCarrier: 1
     FoodMeatCat: 1
+  recipeType:
+  - Oven
+
+# Baked Fish
+
+- type: microwaveMealRecipe
+  id: RecipeBakedFishFillet
+  name: baked fish fillet recipe
+  result: FoodMealBakedFishFillet
+  time: 10
+  group: Savory
+  solids:
+    FoodMeatFishGeneric: 1
+    FoodTomato: 1
+  reagents:
+    OilOlive: 5
+    JuiceLemon: 5
+    Blackpepper: 2
+  recipeType:
+  - Oven
+
+- type: microwaveMealRecipe
+  id: RecipeFishLemonPasta
+  name: fish lemon pasta recipe
+  result: FoodMealFishLemonPasta
+  time: 10
+  group: Pasta
+  solids:
+    FoodNoodlesBoiled: 1
+    FoodMeatFishGeneric: 1
+    FoodTomato: 1
+  reagents:
+    JuiceLemon: 5
+    OilOlive: 5
+    TableSalt: 2
+  recipeType:
+  - Assembler
+
+# Soup
+
+- type: microwaveMealRecipe
+  id: RecipeFishChowder
+  name: fish chowder recipe
+  result: FoodSoupFishChowder
+  time: 10
+  group: Soup
+  reagents:
+    Water: 10
+    Milk: 5
+    TableSalt: 2
+    Blackpepper: 2
+  solids:
+    FoodBowlBig: 1
+    FoodMeatFishGeneric: 1
+    FoodPotato: 1
+    FoodOnionSlice: 2
   recipeType:
   - Oven
 
@@ -130,6 +187,7 @@
   - Oven
 
 #Breads & Sandwiches
+# Sandwiches, toasts, and simple bread dishes.
 
 - type: microwaveMealRecipe
   id: RecipeAvocadoToast
@@ -189,6 +247,22 @@
   - Assembler
 
 - type: microwaveMealRecipe
+  id: RecipeFishSalad
+  name: fish salad recipe
+  result: FoodSaladFishGeneric
+  time: 5
+  group: Salad
+  reagents:
+    Vinaigrette: 5
+  solids:
+    FoodBowlBig: 1
+    FoodMeatFishGeneric: 1
+    FoodCucumber: 1
+    FoodTomato: 1
+  recipeType:
+  - Assembler
+
+- type: microwaveMealRecipe
   id: RecipeFoodBakedChevreChaudCotton
   name: cotton chevre chaud recipe
   result: FoodBakedChevreChaudCotton
@@ -218,9 +292,8 @@
   - Oven
   - Microwave
 
-# Не добавляем вариант с generic для вяленого карпа — это именно карп.
-
-# Birb
+# Bird-based roasts
+# Whole roasted poultry and similar.
 
 - type: microwaveMealRecipe
   id: RecipeFoodBakedWholeChicken
@@ -257,6 +330,7 @@
 
 
 # Sushi
+# Sushi recipes; carp-only by default with generic variants hidden.
 
 - type: microwaveMealRecipe
   id: RecipeAvocadoSushi
@@ -290,7 +364,25 @@
   recipeType:
   - Assembler
 
-# Суши оставляем карповыми — без generic.
+# Generic fish variant (hidden)
+- type: microwaveMealRecipe
+  id: RecipeCarpSushiFish
+  name: carp sushi recipe (fish fillet)
+  result: FoodMealCarpSushi
+  time: 5
+  group: Savory
+  solids:
+    FoodAvocadoSlice: 2
+    FoodCucumberSlice: 2
+    FoodMeatFishGeneric: 1
+  reagents:
+    Rice: 15
+    Water: 10
+  recipeType:
+  - Assembler
+  hideInGuidebook: true
+
+# Sushi remains carp-only; generic fish variant provided separately.
 
 - type: microwaveMealRecipe
   id: RecipeCuredCarpSushi
@@ -308,7 +400,26 @@
   recipeType:
   - Assembler
 
+# Generic fish variant (hidden)
+- type: microwaveMealRecipe
+  id: RecipeCuredCarpSushiFish
+  name: fresh fish sushi recipe (fish fillet)
+  result: CuredCarpSushi
+  time: 5
+  group: Savory
+  solids:
+    FoodAvocadoSlice: 2
+    FoodCucumberSlice: 2
+    FoodMeatFishGeneric: 1
+  reagents:
+    Rice: 15
+    Water: 10
+  recipeType:
+  - Assembler
+  hideInGuidebook: true
+
 # Salad
+# Fresh salads and moth-specific variants.
 
 - type: microwaveMealRecipe
   id: RecipeGreekSalad
@@ -360,6 +471,7 @@
   - Assembler
 
 # Fryer Prep
+# Battered items for frying or deep-fry preparation.
 
 - type: microwaveMealRecipe
   id: RecipeBatteredChicken
@@ -401,9 +513,24 @@
   solids:
     FoodCuredCarp: 1
   recipeType:
-  - Assembler
   - Oven
   - Microwave
+
+- type: microwaveMealRecipe
+  id: RecipeBatteredFishGeneric
+  name: battered fish recipe (fish fillet)
+  result: FoodCuredCarpBattered
+  group: Savory
+  time: 5
+  reagents:
+    Flour: 5
+    Egg: 6
+  solids:
+    FoodMeatFishGeneric: 1
+  recipeType:
+  - Oven
+  - Microwave
+  hideInGuidebook: true
 
 - type: microwaveMealRecipe
   id: RecipeBatteredOnionRings
@@ -756,6 +883,7 @@
 #   - Assembler
 
 # Other
+# Miscellaneous special or thematic recipes.
 
 - type: microwaveMealRecipe
   id: RecipeCatCrispy
@@ -963,6 +1091,7 @@
   - Oven
 
 # Pasta and Noodles
+# Pasta dishes and ramen-style noodle bowls.
 
 - type: microwaveMealRecipe
   id: RecipeRiceNoodleSheet
@@ -1113,6 +1242,7 @@
   - Oven
 
 # Frozen desserts
+# Ice creams, popsicles, snowcones, and other frozen sweets.
 
 - type: microwaveMealRecipe
   id: RecipeIceCreamSandwich
@@ -1354,6 +1484,7 @@
   - Assembler
 
 # NOT ACTUAL FOOD
+# Non-food or medicinal processing outputs.
 
 - type: microwaveMealRecipe
   id: RecipeDriedShrooms
