--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_meal.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_meal.yml
@@ -71,6 +71,10 @@
       - FoodSoupBungo
       - FoodMealCornInButter
       - FoodSoupStew
+      - FoodSaladFishGeneric
+      - FoodSoupFishChowder
+      - FoodMealFishLemonPasta
+      - FoodMealBakedFishFillet
     chance: 0.8
     offset: 0.0
     #rare
@@ -94,4 +98,3 @@
       - FoodSoupEyeball
       - FoodSoupElectron
       - FoodNoodlesCopy
-    rareChance: 0.05
