--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
@@ -6,7 +6,7 @@
   description: "Healthy. Allegedly. Fish definitely involved."
   components:
   - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/fish_dishes.rsi
+    sprite: _Lua/Objects/Consumable/Food/fish_dishes.rsi # Lua: перенесено из _NF
     state: fish_salad
     scale: 0.9, 0.6
   - type: FlavorProfile
@@ -31,7 +31,7 @@
   description: "Thick enough to stand your spoon. Don't test that."
   components:
   - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/fish_dishes.rsi
+    sprite: _Lua/Objects/Consumable/Food/fish_dishes.rsi # Lua: перенесено из _NF
     state: fish_chowder
     scale: 0.9, 0.6
   - type: FlavorProfile
@@ -56,7 +56,7 @@
   description: "When life gives you lemons, add fish and carbs."
   components:
   - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/fish_dishes.rsi
+    sprite: _Lua/Objects/Consumable/Food/fish_dishes.rsi # Lua: перенесено из _NF
     state: fish_lemon_pasta
   - type: FlavorProfile
     flavors:
@@ -81,7 +81,7 @@
   description: "Crispy outside, space-fishy inside. Chef's secret: heat."
   components:
   - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/fish_dishes.rsi
+    sprite: _Lua/Objects/Consumable/Food/fish_dishes.rsi # Lua: перенесено из _NF
     state: baked_fish_fillet
   - type: FlavorProfile
     flavors:
@@ -216,7 +216,7 @@
       - salty
       - peppery
   - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/dragonomelette.rsi
+    sprite: _Lua/Objects/Consumable/Food/dragonomelette.rsi # Lua: перенесено из _NF
     state: icon
   - type: SolutionContainerManager
     solutions:
@@ -723,7 +723,7 @@
       - chicken
       - pasta
   - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/meals.rsi
+    sprite: _Lua/Objects/Consumable/Food/meals.rsi # Lua: перенесено из _NF
     state: chickenparm
   - type: SolutionContainerManager
     solutions:
