--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -54,8 +54,8 @@
     price: 800
   - type: ResearchClient
   - type: TechnologyDatabase
-  - type: MaterialStorageMagnetPickup # Frontier
-    range: 0.30 # Frontier
+  - type: MaterialStorageMagnetPickup #Lua
+    range: 0.30 #Lua: null<0.30
     magnetEnabled: false
 
 # a lathe that can be sped up with space lube / slowed down with glue
@@ -67,7 +67,7 @@
   - type: ReagentSpeed
     solution: lube
     modifiers:
-      SpaceLube: 0.5 # Frontier: 0.25<0.5 (we double dip on time with lube and machine parts)
+      SpaceLube: 0.5 #Lua: 0.25<0.5
       SpaceGlue: 5
   - type: SolutionContainerManager
     solutions:
@@ -86,12 +86,12 @@
   components:
   - type: Lathe
     materialUseMultiplier: 0.5
-    timeMultiplier: 3 # Frontier: 1.5<3 (we double dip on time with lube and machine parts)
+    timeMultiplier: 3 #Lua: 1.5<3
   - type: LatheHeatProducing
   - type: ReagentSpeed
     modifiers:
-      SpaceLube: 0.5 # Frontier: 0.8<0.5
-      SpaceGlue: 5 # no change from normal lathe, overheat!!!
+      SpaceLube: 0.5 #Lua: 0.8<0.5
+      SpaceGlue: 5 #Lua
 
 - type: entity
   id: Autolathe
@@ -139,14 +139,14 @@
     - ServiceStatic
     - PowerCellsStatic
     - ElectronicsStatic
-    - NFSalvageStatic # Frontier
-    - NFLights # Frontier
-    - NFServiceStatic # Frontier
+    - NFSalvageStatic #Lua
+    - NFLights #Lua
+    - NFServiceStatic #Lua
     - ReportingStatic # DeltaV
     - NFPaperAndPaperAccessories # Frontier
   - type: EmagLatheRecipes
     emagStaticPacks:
-    - NfsdAmmoStatic # Frontier: SecurityAmmoStatic<NfsdAmmoStatic
+    - NfsdAmmoStatic #Lua: SecurityAmmoStatic<NfsdAmmoStatic
   - type: BlueprintReceiver
     whitelist:
       tags:
@@ -339,7 +339,7 @@
   description: Creates parts for robotics and other mechanical needs.
   components:
   - type: Sprite
-    snapCardinals: true # Frontier
+    snapCardinals: true #Lua
     sprite: Structures/Machines/exosuit_fabricator.rsi
     layers:
     - state: fab-idle
@@ -357,12 +357,12 @@
     - RoboticsStatic
     - BorgModulesStatic
     - BorgLimbsStatic
-    - MechMiscStatic # Mono
+    - MechMiscStatic #Lua
     dynamicPacks:
     - Robotics
     - BorgModules
     - MechParts
-    - MechEquipment # Mono - Mech parts
+    - MechEquipment #Lua - Mech parts
     - ClarkeMechParts
     - DurandMechParts
     - GygaxMechParts
@@ -395,7 +395,7 @@
   parent: BaseLathe
   name: biocube fabricator
   description: Produces animal cubes using biomass.
-  categories: [ HideSpawnMenu ] # Frontier
+  categories: [ HideSpawnMenu ] #Lua
   components:
   - type: Sprite
     sprite: Structures/Machines/biofabricator.rsi
