--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -386,8 +386,8 @@
     price: 800
   - type: ResearchClient
   - type: TechnologyDatabase
-  - type: MaterialStorageMagnetPickup
-    range: 0.30
+  - type: MaterialStorageMagnetPickup #Lua
+    range: 0.30 #Lua: null<0.30
   - type: Machine
     board: BlueprintLithographMachineCircuitboard
   - type: RequireProjectileTarget
