--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -424,7 +424,7 @@
     unlitIdleState: unshaded
     unlitRunningState: building-unshaded
     defaultProductionAmount: 1
-    productValueModifier: 0.3
+    productValueModifier: null
     staticPacks:
     - NFScrapStatic
   - type: OreSiloClient
