--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
@@ -6,7 +6,6 @@
   - type: WeaponCaseInsertable # Frontier
   - type: EnergySword
   - type: ItemToggle
-    onActivate: false # prevent activation via E while in world/containers
     soundActivate:
       path: /Audio/Weapons/ebladeon.ogg
     soundDeactivate:
@@ -101,7 +100,6 @@
   description: A not as loud and dangerous dagger with a beam made of pure, concentrated plasma. This one is completely undisguised.
   components:
   - type: ItemToggle
-    onActivate: false # prevent activation via E while in world/containers
     soundActivate:
       path: /Audio/Weapons/ebladeon.ogg
       params:
@@ -274,7 +272,7 @@
   components:
   - type: ItemToggle
     onUse: false # wielding events control it instead
-    onActivate: false # prevents activation via E while in world/containers
+    onActivate: false # prevents the weapon from being able to be turned on when it is on the ground
     soundActivate:
       path: /Audio/Weapons/ebladeon.ogg
       params:
