--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -727,7 +727,7 @@
       idleState: icon
       runningState: building
       defaultProductionAmount: 10
-      productValueModifier: 0.3 # Frontier
+      productValueModifier: null # Frontier
       staticPacks:
       - OreSmelting
       # - RGlassSmelting # Frontier: raw mats only
