--- a/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
@@ -46,6 +46,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.5,-0.5,0.5,0.5"
@@ -151,6 +152,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.5,-0.5,0.5,0.5"
@@ -189,6 +191,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.375,-0.375,0.375,0.375"
@@ -226,6 +229,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.5,-0.5,0.5,0.5"
@@ -267,6 +271,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.5,-0.5,0.5,0.5"
@@ -298,6 +303,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.35,-0.35,0.35,0.35"
@@ -362,6 +368,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.45,-0.45,0.45,0.45"
@@ -425,6 +432,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeCircle
           radius: 0.35
