--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_dinosaurs.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_dinosaurs.yml
@@ -37,6 +37,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeCircle
           radius: 0.40 # Lowered the value, to allow them to fit through the airlocks
@@ -111,6 +112,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.4,-0.4,0.4,0.4"
@@ -158,6 +160,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.5,-0.75,0.5,0.75"
@@ -211,6 +214,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-0.8,-0.8,0.8,0.8"
@@ -261,6 +265,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-1.5,-0.9,1.5,0.9"
@@ -313,6 +318,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-1.5,-1.0,1.5,1.0"
@@ -365,6 +371,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-1.5,-1.0,1.5,1.0"
@@ -457,6 +464,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-2.5,-1.0,2.5,1.0"
@@ -509,6 +517,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-1.8,-0.9,1.8,0.9"
@@ -562,6 +571,7 @@
   - type: Fixtures
     fixtures:
       fix1:
+        #Lua Fix hitbox
         shape:
           !type:PhysShapeAabb
           bounds: "-2.3,-1.0,2.3,1.0"
