Добавила чутка комментов с остальным разберись сам

--- a/Resources/Prototypes/_Lua/tags/finance_tags.yml
+++ b/Resources/Prototypes/_Lua/tags/finance_tags.yml
@@ -1,4 +1,8 @@
-# LuaWorld - This file is licensed under AGPLv3
+# Tags used by finance consoles to mark map-placed entities and for whitelists.
+# NFFinanceLoansConsole: public/command loan overview consoles
+# NFFinanceDepositConsole: personal deposit terminal (requires ID)
+# NFFinanceRatingConsole: credit rating lookup console
+# NFFinanceIssuanceConsole: privileged loan issuance console
 
 - type: Tag
   id: NFFinanceLoansConsole
