--- a/Resources/Prototypes/_Lua/Entities/Structures/Machines/Computers/finance_computers.yml
+++ b/Resources/Prototypes/_Lua/Entities/Structures/Machines/Computers/finance_computers.yml
@@ -2,6 +2,15 @@
 # Copyright (c) 2025 LuaWorld Contributors
 # See AGPLv3.txt for details.
 
+##
+# Finance consoles set
+# - Deposits Overview (Service/Command variants): read-only crew deposits, access-gated
+# - Personal Deposit Terminal: player-managed deposits via ID insertion
+# - Credit Rating Console: lookup by name/ID, shows score and limits
+# - Loan Issuance Console: privileged issuance, requires Command access + ID
+# - Public Loan Board: read-only station loans
+##
+
 - type: entity
   parent: BaseComputerAiAccess
   id: NFFinanceDepositsViewComputerService
