--- a/Resources/Prototypes/Entities/Structures/Machines/flatpacker.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/flatpacker.yml
@@ -5,10 +5,13 @@
   description: An industrial machine used for expediting machine construction across the station.
   components:
   - type: Sprite
-    sprite: _Lua/Structures/Machines/flatpacker.rsi
+    sprite: _Lua/Structures/Machines/flatpacker.rsi # Lua
     snapCardinals: true
     layers:
     - state: base
+#    - state: screen # Lua
+#      map: ["enum.PowerDeviceVisualLayers.Powered"]
+#      shader: unshaded
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
     - state: packing
